Added Swipe functionality

--- a/week1-tasks/index.html
+++ b/week1-tasks/index.html
@@ -12,8 +12,10 @@
         <blockquote id = "quote">What you are must always displease you, if you would attain to that which you are not</blockquote>
         <cite id = "author">Saint Augustine</cite>
         <button id = "generate">Generate</button>
+        <p class="swipe">Or swipe left to generate a new quote</p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
