Added Search Functionality

--- a/week1-tasks/index.html
+++ b/week1-tasks/index.html
@@ -9,9 +9,12 @@
 <body>
     <div class="quote-wrapper">
         <h2>Quote of the Day</h2>
-        <blockquote id = "quote">What you are must always displease you, if you would attain to that which you are not</blockquote>
-        <cite id = "author">Saint Augustine</cite>
-        <button id = "generate">Generate</button>
+        <blockquote id = "quote"></blockquote>
+        <cite id = "author"></cite>
+        <div class="search">
+            <input type="text" id="search-author" placeholder="Search by author">
+            <button id="search"><img src="https://static.thenounproject.com/png/2946467-200.png" alt="Search Icon"></button>
+        </div>
         <p class="swipe">Or swipe left to generate a new quote</p>
     </div>
 
